# spicetify-agent-skill

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  RELEASE.md  agent-bundle.json  manifest.generated.json  manifest.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-verify.yml
apps/docs/: content-map.json  docs-site-manifest.json  next.config.mjs  package.json
apps/docs/app/: page.tsx  style.css
apps/docs/lib/: content.ts  source.ts
apps/docs/scripts/: lint-docs.mjs  validate-docs-content.mjs
docs/: README.md  content-map.json  docs-site-manifest.json  next.config.mjs  package.json
docs/app/: layout.tsx  page.tsx  style.css
docs/app/llms-full.txt/: route.ts
docs/app/llms.txt/: route.ts
docs/components/spicetify/: docs-contracts.md
docs/content/docs/: index.mdx  quickstart.mdx
docs/lib/: source.ts
docs/planning/add-spicetify-skill/: PLANS.md  README.md  acceptance-matrix.md  api-contracts.md  architecture.md  audit-review.md  automation-boundaries.md  cli-ux-contract.md  codex-handoff.md  codex-kickoff-prompt.md  codex-tooling.md  confirmation-flow.md  context-map.md  decision-records.md  desired-state-manifest.md  docs-content-architecture.md  docs-site-content-map.md  docs-site-design-system.md  docs-site-implementation-plan.md  docs-site.md  goal.md  (+24 more)
docs/scripts/: lint-docs.mjs  validate-docs-content.mjs
evals/: regression-prompts.json  spicetify-eval-suite.json  spicetify-research-eval-suite.json  spicetify-routing-eval-suite.json
openspec/: config.yaml
schemas/: asset-workflow-plan.schema.json  consent-grant.schema.json  docs-site-content.schema.json  docs-site-manifest.schema.json  eval-suite.schema.json  subagent-result.schema.json
skills/spicetify/: SKILL.md
src/spicetify_agent/: __init__.py  audit.py  cli.py  commands.py  modes.py  platform.py  policy.py  privacy.py  provenance.py  reports.py  runner.py  safe_paths.py  schemas.py  state.py  util.py
tests/: test_audit_privacy_state.py  test_command_policy_modes.py  test_docs_references.py  test_eval_contracts.py  test_fake_spicetify_contract.py  test_openspec_structure.py  test_packaging_metadata.py  test_prompt_first_assets.py  test_regression_prompts.py  test_util_and_errors.py  test_validate_bundle.py
tests/evals/: __init__.py  test_eval_fixtures.py
tests/helpers/: fake_spicetify.py
tests/integration/: test_fake_runner.py
tests/unit/: test_command_registry.py
tools/: generate_docs_references.py  generate_schema_data.py  run_skill_evals.py  validate_bundle.py  validate_openspec_structure.py
(+354 files in other folders)
