[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"

[project]
name = "spicetify-agent"
version = "0.1.1"
description = "Dry-run-first /spicetify operator around the Spicetify CLI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["spicetify", "spotify", "agent", "cli", "dry-run"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = []

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "ty",
]

[project.scripts]
spicetify-agent = "spicetify_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = [
  "S101",
]
