[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spicetify-agent"
version = "0.1.1"
description = "Dry-run-first /spicetify operator around the Spicetify CLI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["spicetify", "spotify", "agent", "cli", "dry-run"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = []

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "ty",
]

[project.scripts]
spicetify-agent = "spicetify_agent:main"

[tool.setuptools]
py-modules = [
  "spicetify_agent",
  "_asset_inspectors",
  "_asset_path_guard",
  "_asset_plans",
  "_asset_research",
  "_asset_sources",
  "_asset_templates",
  "_audit",
  "_commands",
  "_errors",
  "_intent_router",
  "_modes",
  "_platform",
  "_policy",
  "_privacy",
  "_provenance",
  "_reports",
  "_runner",
  "_safe_paths",
  "_schema_data",
  "_schemas",
  "_state",
  "_util",
  "_verify",
]

[tool.setuptools.package-dir]
"" = "skills/spicetify/scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/spicetify/scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = [
  "S101",
]
